# play-helloworld-admin-api

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  views.py
app/: asgi.py  settings.py  urls.py  wsgi.py
app/account/: urls.py  views.py
app/app/: asgi.py  fdsafdsa.py  urls.py  wsgi.py
app/app/middleware/: jwt_authentication_middleware.py
app/app/settings/: base.py
backend/: .gitignore  db.sqlite3  pyproject.toml
backend/app/: views.py
backend/app/migrations/: 0001_initial.py
backend/helloworld/: settings.py
helloworld/: settings.py  urls.py
snippets/: urls.py  views.py
snippets/migrations/: 0001_initial.py
user/: models.py  urls.py
