[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["khw0828 <97077535+gusdn0828@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
